# task-mgmt-app

./: README.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py  auth.py  constants.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/client/core/: OpenAPI.ts
frontend/src/components/: add-tast.tsx  edit-task.tsx  header.tsx  icons.tsx  task-card.tsx  task-form.tsx  user-auth-form.tsx
frontend/src/lib/: api.ts  auth.ts  session.ts  types.ts
