[tool.poetry]
name = "task-mgmt-app-backend"
version = "0.1.0"
description = ""
authors = ["Naveen M K <naveen521kk@gmail.com>"]
readme = "README.md"
packages = [{include = "task_mgmt_app_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
